--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <p>Ka Hồng</p>
     <p>Đỗ Ka Quỳnh Anh</p>
     <p>Phạm Ngọc Thúy An</p>
-    <p>Nhân ngày 20/10. Chúc các bạn có tất cả trừ vất vả. Mau ăn chóng lớn:>>. Luôn vui vẻ sống tích cực. Chúc cô Linh luôn xinh đẹp rạng rỡ và chủ nhiệm những lớp cute như bọn e:>></p>
+    <p>Nhân ngày 20/10. Chúc các bạn có tất cả trừ vất vả. Mau ăn chóng lớn:>>. Luôn vui vẻ sống tích cực. Chúc cô Linh luôn xinh đẹp rạng rỡ và chủ nhiệm những lớp cute như bọn e:>>. Đọc xong chờ 1 tẹo nha cô và các bợn!!!</p>
   </div>
 
   <div class="credit">Cre: letuanthinhdeptrai</div>
