--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chúc mừng 20/10 💖</title>
+  <title>Chúc mừng 20/10 </title>
   <link rel="stylesheet" href="style.css">
   <style>
     .scroll-text {
@@ -79,7 +79,7 @@
     <p>Ka Hồng</p>
     <p>Đỗ Ka Quỳnh Anh</p>
     <p>Phạm Ngọc Thúy An</p>
-    <p>Nhân ngày 20/10. Chúc các bạn có tất cả trừ vất vả. Mau ăn chóng lớn:>>. Luôn vui vẻ sống tích cực. Chúc cô Linh luôn xinh đẹp rạng rỡ và chủ nhiệm những lớp cute như bọn e:>>. Đọc xong chờ 1 tẹo nha cô và các bợn a ri ga tô!!!</p>
+    <p>Nhân ngày 20/10. Chúc các bạn có tất cả trừ vất vả. Mau ăn chóng lớn:>>. Luôn vui vẻ sống tích cực. Chúc cô Linh luôn xinh đẹp rạng rỡ và chủ nhiệm những lớp cute như bọn e:>>. Đọc xong chờ 1 tẹo nha cô và các bợn a ri ga tô!!!❤️</p>
   </div>
 
   <div class="credit">Cre: letuanthinhdeptrai</div>
